# GameEngine_S22_Deye_Lei

./: .gitignore  CMakeLists.txt  README.md  Spring22GameG.sln  unique.txt
Glad/: Glad.vcxproj
Glad/include/glad/: glad.h
Space/: CMakeLists.txt  GWindows.cpp  GWindows.h  GameWindow.cpp  GameWindow.h  KeyCodeDef.h  KeyEvent.cpp  KeyEvent.h  MyShader.cpp  MyShader.h  MyShaderImplementation.h  Pic.cpp  Pic.h  PicImplementation.h  Pic_Render_Implementation.h  Pic_Renderer.cpp  Pic_Renderer.h  Space.h  Space.vcxproj  Space.vcxproj.filters  SpaceApp.cpp  SpaceApp.h  SpaceUtil.h  WindowImplementation.h  WindowParent.h
Space/GLFWwrapper/: GlfwWinWrapper.cpp  GlfwWinWrapper.h
Space/My_things/Shaders_codes/: defaultVertexShader.glsl
Space/OpenGLWrapper/: MOpenGLShader.cpp  MOpenGLShader.h  OpenGLPic_Renderer.cpp  OpenGLPic_Renderer.h  OpenGLWrapper.cpp  OpenGLWrapper.h
Space/specificGLFW/: GlfwWinWrapper.cpp  GlfwWindow.cpp  GlfwWindow.h
Spring22GameG/: CMakeLists.txt  Game_Unit.cpp  Game_Unit.h  InMoveableUnit.cpp  InMoveableUnit.h  InMoveableUnitMShape.cpp  InMoveableUnitMShape.h  MoveableUnit.cpp  MoveableUnit.h  Spring22GameG.vcxproj  Spring22GameG.vcxproj.filters  SpringGameG22App.cpp  SpringGameG22App.h  main.cpp
glad/: CMakeLists.txt  glad.vcxproj
glad/src/: glad.c
irrKlang/: irrKlang.vcxproj  irrKlang.vcxproj.filters
stblib/: CMakeLists.txt  stblib.vcxproj
